2015-02-11  Benjamin Villard  <b.0134@gmail.com>

	- Added the offset for the position of the pixel coordinates in
	regards to the 'min' field. Previously the coordinates gave the
	centre of the voxel/pixel.

2015-02-10  Ramon Casero  <rcasero@gmail.com>

	* matlab/FiltersToolbox/CMakeLists.txt: (0.2.7)

	- Add Darryl's forward_TV_mex() function to the build system.

2014-02-06  Darryl McClymont  <darryl.mcclymont@gmail.com>

	* matlab/DiffusionMRIToolbox/wild_bootstrapping_DTI.m (0.1.2)

	- Now returns cone of uncertainty for 2nd and 3rd eigenvectors
	too.

2015-01-29  Benjamin Villard <b.016434@gmail.com>

	* matlab/FilesFormatToolbox/dcm2scimat.m (0.2.0)

	- Modified dcm2scimat.m Added temporal dimension to the axis
	properties.

2015-01-29  Benjamin Villard <b.016434@gmail.com>

	* matlab/FilesFormatToolbox/dcm2scimat.m (0.1.0)

	- Added function dcm2scimat.m. The function converts DICOM data
	structure to scimat format.  Inputs fed are the dicom
	metainformation along with the dicom image files.

2015-01-27  Ramon Casero  <rcasero@gmail.com>

	* CMakeLists.txt: (0.9.5)

	- Issue 44. Fix bug. Build was breaking without a clear error
	message in linux systems if program "m4" was not installed,
	because it's necessary to build GMP. Now we search for it, and
	give a clear error message so that the user installs m4.

2014-01-27  Darryl McClymont  <darryl.mcclymont@gmail.com>

	* matlab/DiffusionMRIToolbox/fit_DT.m (0.1.6)

	- Modified the argument for skipping voxels. Can now be either a
	scalar threshold or a mask.

	* matlab/FiltersToolbox/forward_TV.m: (0.1.2)

	- Added missing details in help header.

2015-01-27  Benjamin Villard <b.016434@gmail.com>

	* matlab/FiltersToolbox/scimat_crop.m (0.2.1)

	- Modified scimat_crop.m to allow cropping of 4D volumes.

2015-01-21  Ramon Casero  <rcasero@gmail.com>

	* matlab/FilesFormatToolbox/load_dcm.m (0.1.1)

	- Fix help header. Part of the copyright notice missing. Help